--- a/packages/web/src/components/ui/SearchResultsSidebar/SearchResultsSidebar.module.scss
+++ b/packages/web/src/components/ui/SearchResultsSidebar/SearchResultsSidebar.module.scss
@@ -9,7 +9,7 @@
 .sidebarItem {
   &:not(:first-child) {
     padding-top: 24px;
-    border-top: 1px solid $gray-border;
+    border-top: 1px solid rgba($gray-border, 0.5);
   }
 }
 
